name:                yi-static
category:            Text
version:             0.1.0.0
synopsis:            My static yi configuration
homepage:            https://github.com/mmn80/yi-static
bug-reports:         https://github.com/mmn80/yi-static/issues
author:              Călin Ardelean
maintainer:          Călin Ardelean <mmn80cpu@gmail.com>
copyright:           Copyright (c) 2016 Călin Ardelean
license:             MIT
license-file:        LICENSE.md
stability:           experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/mmn80/yi-static.git

executable yi
  main-is: Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options: -O2 -threaded -Wall -ferror-spans -fcontext-stack=110
  build-depends:
    base             >= 4.8 && < 5,
    mtl,
    text,
    semigroups,
    docopt           >= 0.7,
    Hclip,
    pointedlist,
    lens,
    yi,
    yi-language,
    yi-rope
